@@ -81,8 +81,11 @@ module NewRelic
         end
         def call_with_newrelic(*args)
           @newrelic_env = args.first
-          perform_action_with_newrelic_trace(:category => :rack) do
-            call_without_newrelic(*args)
+          perform_action_with_newrelic_trace(:category => :rack, :params => {:uri => @newrelic_env['REQUEST_PATH']}) do
+            result = call_without_newrelic(*args)
+            # Ignore cascaded calls
+            MetricFrame.current.abort_transaction! if result.first == 404
+            result
           end
         end
         def self.included middleware #:nodoc:
